<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/drawer_channel"
        android:icon="@drawable/ic_send"
        android:title="@string/telegram_channel" />
    <item
        android:id="@+id/drawer_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/connect_with_us" />
    <item
        android:id="@+id/drawer_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />
    <item
        android:id="@+id/drawer_rate"
        android:icon="@drawable/ic_rate"
        android:title="@string/rate" />
    <item
        android:id="@+id/drawer_info"
        android:icon="@drawable/ic_info_button"
        android:title="@string/about_us" />
</menu>