<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/mobile_navigation" />

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bottom_nav_back"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/balans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_21sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_bottom_balans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/balance"
                android:textColor="@color/blue2"
                android:textSize="@dimen/_7sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/operator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_21sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_bottom_operator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/operator"
                android:textColor="@color/blue2"
                android:textSize="@dimen/_7sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />


        <LinearLayout
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_27sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_bottom_alarm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:text="@string/news"
                android:textColor="@color/blue2"
                android:textSize="@dimen/_7sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_21sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_bottom_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/blue2"
                android:textSize="@dimen/_7sdp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/bottom_nav_home_back"
        android:clickable="true"
        android:focusable="?selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@id/bottom_nav"
        app:layout_constraintLeft_toLeftOf="@id/bottom_nav"
        app:layout_constraintRight_toRightOf="@id/bottom_nav">

        <ImageView
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/_14sdp"
            android:src="@drawable/ic_bottom_home" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>